Fix multiple Initialize() calls and reenable VEA usage in MediaRecorder for Win8

This Cl does two things:
- Reverts the CL that disables VEA usage until flaky test is addressed
https://codereview.chromium.org/2727633008
- Fixes the underlying issue of flakiness by not allowing |encoder_| to be
initialized multiple times.

BUG=698441
TEST=Local run of tests consistently pass.

Review-Url: https://codereview.chromium.org/2775453003
Cr-Commit-Position: refs/heads/master@{#459598}

Former-commit-id: 1ea19d13673e5fbe40925ba23a49f1bfa6877287